crates/gridwell-writer-quarto/tests/snapshots/snapshots__hidden-columns.snap
---
source: crates/gridwell-writer-quarto/tests/snapshots.rs
expression: out
---
{
  "c": [
    [
      "",
      [
        "quarto-table",
        "cell-output-display"
      ],
      []
    ],
    [
      {
        "c": [
          [
            "",
            [],
            []
          ],
          [
            null,
            []
          ],
          [
            [
              {
                "t": "AlignLeft"
              },
              {
                "t": "ColWidthDefault"
              }
            ],
            [
              {
                "t": "AlignLeft"
              },
              {
                "t": "ColWidthDefault"
              }
            ]
          ],
          [
            [
              "",
              [],
              []
            ],
            [
              [
                [
                  "",
                  [],
                  []
                ],
                [
                  [
                    [
                      "",
                      [],
                      []
                    ],
                    {
                      "t": "AlignDefault"
                    },
                    1,
                    1,
                    [
                      {
                        "c": [
                          {
                            "c": "Visible",
                            "t": "Str"
                          },
                          {
                            "t": "Space"
                          },
                          {
                            "c": "1",
                            "t": "Str"
                          }
                        ],
                        "t": "Plain"
                      }
                    ]
                  ],
                  [
                    [
                      "",
                      [],
                      []
                    ],
                    {
                      "t": "AlignDefault"
                    },
                    1,
                    1,
                    [
                      {
                        "c": [
                          {
                            "c": "Visible",
                            "t": "Str"
                          },
                          {
                            "t": "Space"
                          },
                          {
                            "c": "2",
                            "t": "Str"
                          }
                        ],
                        "t": "Plain"
                      }
                    ]
                  ]
                ]
              ]
            ]
          ],
          [
            [
              [
                "",
                [],
                []
              ],
              0,
              [],
              [
                [
                  [
                    "",
                    [],
                    []
                  ],
                  [
                    [
                      [
                        "",
                        [],
                        []
                      ],
                      {
                        "t": "AlignDefault"
                      },
                      1,
                      1,
                      [
                        {
                          "c": [
                            {
                              "c": "a",
                              "t": "Str"
                            }
                          ],
                          "t": "Plain"
                        }
                      ]
                    ],
                    [
                      [
                        "",
                        [],
                        []
                      ],
                      {
                        "t": "AlignDefault"
                      },
                      1,
                      1,
                      [
                        {
                          "c": [
                            {
                              "c": "b",
                              "t": "Str"
                            }
                          ],
                          "t": "Plain"
                        }
                      ]
                    ]
                  ]
                ],
                [
                  [
                    "",
                    [],
                    []
                  ],
                  [
                    [
                      [
                        "",
                        [],
                        []
                      ],
                      {
                        "t": "AlignDefault"
                      },
                      1,
                      1,
                      [
                        {
                          "c": [
                            {
                              "c": "c",
                              "t": "Str"
                            }
                          ],
                          "t": "Plain"
                        }
                      ]
                    ],
                    [
                      [
                        "",
                        [],
                        []
                      ],
                      {
                        "t": "AlignDefault"
                      },
                      1,
                      1,
                      [
                        {
                          "c": [
                            {
                              "c": "d",
                              "t": "Str"
                            }
                          ],
                          "t": "Plain"
                        }
                      ]
                    ]
                  ]
                ]
              ]
            ]
          ],
          [
            [
              "",
              [],
              []
            ],
            []
          ]
        ],
        "t": "Table"
      }
    ]
  ],
  "t": "Div"
}
